src/tests/code/fail/fail_variable_shadowing_function.u
decrement:(x:~i64)->(i64{--x})

entrypoint: ~()->(i64{1})
{
	decrement:i64{42};
}
